# OpenProxifier

./: CMakeLists.txt  CMakePresets.json  README.md  README_CN.md  README_EN.md  vcpkg.json
antigravity/: AntigravityWindow.cpp  AntigravityWindow.h  CMakeLists.txt  main.cpp
cli/: CMakeLists.txt  main.c
common/: CMakeLists.txt  Logger.h  ProxyConfig.h
core/: CMakeLists.txt  ConnectionTracker.c  ConnectionTracker.h  LocalProxy.c  LocalProxy.h  PacketProcessor.c  PacketProcessor.h  ProcessTracker.c  ProcessTracker.h  ProxyEngine.c  ProxyEngine.h  RuleEngine.c  RuleEngine.h  Socks5.c  Socks5.h  UdpRelay.c  UdpRelay.h
docs/: 项目目的.txt
hookdll/: CMakeLists.txt  HookManager.cpp  HookManager.h  SocketMapper.cpp  SocketMapper.h  SocketState.h  Socks5Client.cpp  Socks5Client.h  WinsockHooks.cpp  WinsockHooks.h  dllmain.cpp
launcher/: CMakeLists.txt  ConnectionTestThread.cpp  ConnectionTestThread.h  IFEOManager.cpp  IFEOManager.h  Injector.cpp  Injector.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProcessMonitor.cpp  ProcessMonitor.h  ProxifierInjector.cpp  ProxyEngineWrapper.cpp  ProxyEngineWrapper.h  main.cpp
proxytestapp/: CMakeLists.txt  TestAppWindow.cpp  TestAppWindow.h  main.cpp
scripts/: build_x64.bat  build_x86.bat  create_shortcut.bat  install_ifeo_curl.bat  setup_vcpkg.bat  uninstall_ifeo_curl.bat
